fix: turn off nonstandard overflow tweak

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -278,7 +278,8 @@ h2 {
 }
 
 .revshareChart {
-  overflow: visible;
+  /* TODO: can we accomplish this without covering inputs */
+  /* overflow: visible; */
 }
 
 #copyIcon {
